--- a/renokin-landing/css/custom.css
+++ b/renokin-landing/css/custom.css
@@ -1,5 +1,11 @@
 /*!---------- PLACE YOUR CUSTOM STYLES AND OVERRIDES HERE ----------*/
 
+.header-4 .hero-slider,
+.header-4 .hero-slider .slides li {
+	height: 550px;
+	max-height: 550px;
+}
+
 .flex-direction-nav a {
 	background-repeat: no-repeat !important;
 	border: none;
