--- a/styles.css
+++ b/styles.css
@@ -3,19 +3,20 @@
     padding-bottom: 0;
 }
 
-.navbar-brand img {
-    max-height: 40px;
-    border-radius: 50%;
-    display: inline-block;
-    margin-top: 5px;
-    margin-right: 5px;
-}
+    .navbar-brand img {
+        max-height: 40px;
+        border-radius: 50%;
+        display: inline-block;
+        margin-top: 5px;
+        margin-right: 5px;
+        min-height: 40px;
+    }
 
-.navbar-brand span {
-    display: inline-block;
-    vertical-align: middle;
-    margin-top: 5px;
-}
+    .navbar-brand span {
+        display: inline-block;
+        vertical-align: middle;
+        margin-top: 5px;
+    }
 
 .ol-1 > li {
     font-size: 30px;
